# 2019_ICRA

./: README.md
cpp/: CMakeLists.txt
cpp/src/: GHCProjections.cpp  GHCProjections.hpp  demo.cpp
matlab/: DynGHC.m  PrioritizationScheme.m  SoftPrioritization.m  WeightedSumOfSOT.m  testPrioritizationSchemes.m
